OAK-233: Query should use the NodeStore abstraction
Add a NodeState argument to Query.executeQuery().
Adjust the TraversingIndex to use the NodeState instead of directly calling the MicroKernel.
Also extend the TraversingIndex to support common PropertyRestrictions

git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1371168 13f79535-47bb-0310-9956-ffa450edef68