@@ -13,43 +13,82 @@
  */
 package org.apache.jackrabbit.oak.query.index;
 
-import org.apache.jackrabbit.mk.api.MicroKernel;
-import org.apache.jackrabbit.mk.simple.NodeImpl;
+import static org.apache.jackrabbit.oak.spi.Filter.PathRestriction.ALL_CHILDREN;
+
+import java.util.Deque;
+import java.util.Iterator;
+
+import javax.jcr.PropertyType;
+
+import org.apache.jackrabbit.oak.api.CoreValue;
+import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.plugins.memory.MemoryChildNodeEntry;
+import org.apache.jackrabbit.oak.plugins.memory.StringValue;
 import org.apache.jackrabbit.oak.spi.Cursor;
-import java.util.ArrayList;
+import org.apache.jackrabbit.oak.spi.Filter;
+import org.apache.jackrabbit.oak.spi.Filter.PropertyRestriction;
+import org.apache.jackrabbit.oak.spi.state.ChildNodeEntry;
+import org.apache.jackrabbit.oak.spi.state.NodeState;
+
+import com.google.common.collect.Iterators;
+import com.google.common.collect.Queues;
 
 /**
  * A cursor that reads all nodes in a given subtree.
  */
 public class TraversingCursor implements Cursor {
 
-    private final MicroKernel mk;
-    private final String revisionId;
-    private final int childBlockSize;
+    private final Filter filter;
 
-    private ArrayList<NodeCursor> nodes = new ArrayList<NodeCursor>();
+    private final Deque<Iterator<? extends ChildNodeEntry>> nodes =
+            Queues.newArrayDeque();
+
+    private String parentPath;
+
     private String currentPath;
 
-    public TraversingCursor(MicroKernel mk, String revisionId, int childBlockSize, String path) {
-        this.mk = mk;
-        this.revisionId = revisionId;
-        this.childBlockSize = childBlockSize;
-        currentPath = path;
-    }
+    public TraversingCursor(Filter filter, NodeState root) {
+        this.filter = filter;
 
-    private boolean loadChildren(String path, long offset) {
-        String s = mk.getNodes(path, revisionId, 0, offset, childBlockSize, null);
-        if (s == null) {
-            return false;
+        String path = filter.getPath();
+        parentPath = null;
+        currentPath = "/";
+        NodeState parent = null;
+        NodeState node = root;
+        if (!path.equals("/")) {
+            for (String name : path.substring(1).split("/")) {
+                parentPath = currentPath;
+                currentPath = PathUtils.concat(parentPath, name);
+
+                parent = node;
+                node = parent.getChildNode(name);
+
+                if (node == null) {
+                    return; // nothing can match this filter, leave nodes empty
+                }
+            }
         }
-        NodeCursor c = new NodeCursor();
-        c.node = NodeImpl.parse(s);
-        c.node.setPath(path);
-        c.pos = offset;
-        nodes.add(c);
-        String child = c.node.getChildNodeName(0);
-        return child != null;
+
+        switch (filter.getPathRestriction()) {
+        case EXACT:
+        case ALL_CHILDREN:
+            nodes.add(Iterators.singletonIterator(
+                    new MemoryChildNodeEntry(currentPath, node)));
+            parentPath = "";
+            break;
+        case PARENT:
+            if (parent != null) {
+                nodes.add(Iterators.singletonIterator(
+                        new MemoryChildNodeEntry(parentPath, parent)));
+                parentPath = "";
+            }
+            break;
+        case DIRECT_CHILDREN:
+            nodes.add(node.getChildNodeEntries().iterator());
+            parentPath = currentPath;
+            break;
+        }
     }
 
     @Override
@@ -59,53 +98,104 @@ public class TraversingCursor implements Cursor {
 
     @Override
     public boolean next() {
-        if (nodes == null) {
-            currentPath = null;
-            return false;
-        }
-        if (nodes.isEmpty()) {
-            if (!mk.nodeExists(currentPath, revisionId)) {
-                nodes = null;
-                currentPath = null;
-                return false;
-            }
-            loadChildren(currentPath, 0);
-            return true;
-        }
         while (!nodes.isEmpty()) {
-            // next child node in the deepest level
-            NodeCursor c = nodes.get(nodes.size() - 1);
-            currentPath = c.node.getPath();
-            long pos = c.pos++;
-            if (pos >= c.node.getTotalChildNodeCount()) {
-                // there are no more child nodes
-                nodes.remove(nodes.size() - 1);
-            } else {
-                if (pos > 0 && pos % childBlockSize == 0) {
-                    // need to load a new block
-                    nodes.remove(nodes.size() - 1);
-                    if (loadChildren(currentPath, pos)) {
-                        c = nodes.get(nodes.size() - 1);
-                        c.pos++;
-                    }
+            Iterator<? extends ChildNodeEntry> iterator = nodes.getLast();
+            if (iterator.hasNext()) {
+                ChildNodeEntry entry = iterator.next();
+                NodeState node = entry.getNodeState();
+
+                String name = entry.getName();
+                currentPath = PathUtils.concat(parentPath, name);
+
+                if (filter.getPathRestriction() == ALL_CHILDREN) {
+                    nodes.addLast(node.getChildNodeEntries().iterator());
+                    parentPath = currentPath;
                 }
-                String childName = c.node.getChildNodeName(pos % childBlockSize);
-                currentPath = PathUtils.concat(currentPath, childName);
-                loadChildren(currentPath, 0);
-                return true;
+
+                if (matchesFilter(node, currentPath)) {
+                    return true;
+                }
+            } else {
+                nodes.removeLast();
+                parentPath = PathUtils.getParentPath(parentPath);
             }
         }
-        nodes = null;
         currentPath = null;
         return false;
     }
 
-    /**
-     * A pointer to a child node within a node.
-     */
-    static class NodeCursor {
-        NodeImpl node;
-        long pos;
+    private boolean matchesFilter(NodeState node, String path) {
+        for (PropertyRestriction pr : filter.getPropertyRestrictions()) {
+            if ("jcr:path".equals(pr.propertyName)) {
+                if (!matchesValue(new StringValue(path), pr)) {
+                    return false;
+                }
+            } else {
+                PropertyState property = getProperty(node, pr.propertyName);
+                if (property == null) {
+                    return false;
+                } else if (pr.first != null || pr.last != null) {
+                    boolean matches = false;
+                    for (CoreValue value : property.getValues()) {
+                        if (matchesValue(value, pr)) {
+                            matches = true;
+                        }
+                    }
+                    if (!matches) {
+                        return false;
+                    }
+                }
+            }
+        }
+        return true;
+    }
+
+    private PropertyState getProperty(NodeState node, String path) {
+        int slash = path.indexOf('/');
+        while (slash != -1) {
+            node = node.getChildNode(path.substring(0, slash));
+            if (node == null) {
+                return null;
+            }
+            path = path.substring(slash + 1);
+            slash = path.indexOf('/');
+        }
+        return node.getProperty(path);
+    }
+
+    private boolean matchesValue(CoreValue value, PropertyRestriction pr) {
+        int first = -1;
+        if (pr.first != null) {
+            first = compareValues(pr.first, value, pr.first.getType());
+        }
+        if (first > 0 || (first == 0 && !pr.firstIncluding)) {
+            return false;
+        }
+
+        int last = -1;
+        if (pr.last != null) {
+            last = compareValues(value, pr.last, pr.last.getType());
+        }
+        if (last > 0 || (last == 0 && !pr.lastIncluding)) {
+            return false;
+        }
+
+        return true;
+    }
+
+    private int compareValues(CoreValue a, CoreValue b, int type) {
+        if (type == PropertyType.BOOLEAN) {
+            return Boolean.valueOf(a.getBoolean()).compareTo(
+                    Boolean.valueOf(b.getBoolean()));
+        } else if (type == PropertyType.DECIMAL) {
+            return a.getDecimal().compareTo(b.getDecimal());
+        } else if (type == PropertyType.DOUBLE) {
+            return Double.compare(a.getDouble(), b.getDouble());
+        } else if (type == PropertyType.LONG) {
+            return Long.signum(a.getLong() - b.getLong());
+        } else {
+            return a.getString().compareTo(b.getString());
+        }
     }
 
 }
